# backend-template

./: .gitignore  README.md  generate_conf.py  generate_uwgi.py  manage.py  pyproject.toml  reload.sh  requirements.txt  ruff.toml  shell_plus.sh  test_setup_django.py  watch_log.py
backend/: errors.py  fields.py  handler.py  renderer.py  response.py  schema.py  settings.py  storage.py  urls.py
backend/apps/app_template/: api.py-tpl  apps.py-tpl
backend/apps/back/: admin.py  api.py  api_back.py  apps.py  models.py  schema.py  tests.py
backend/apps/back/management/commands/: put_bucket_cors.py
backend/apps/common/: api.py
backend/apps/user/: api.py  apps.py  models.py
backend/decorator/: __init__.py  db.py  docstring.py  response.py
backend/middleware/: logging.py  performance.py
backend/security/: __init__.py  auth.py
backend/utils/: access_utils.py  auth.py  auth_utils.py  cos_utils.py  db.py  db_serializer.py  errors.py  format_number.py  http_response.py  ip_utils.py  middlewares.py  order.py  order_utils.py  orm.py  oss_utils.py  query_logger.py  request.py  response_types.py  snowflake.py  timer.py  typed_model.py  typed_model_meta.py  types.py
backend/utils/s3/: cos.py  oss.py
docs/: acme.md  bashrc.md  cloudflare.md  crontab.md  django.md  git.md  nginx.md  pip.md  python.md  rye.md  screen_script.md  sqlite3.md  swapfile.md  ubuntu.md
docs/django/: dumpdata.md  export-queryset.md
static/tinymce/plugins/help/js/i18n/keynav/: zh-Hans.js
tests/: conftest.py  test_back.py  test_back_api.py  test_orm.py  test_utils.py
typings/django-stubs/core/: paginator.pyi
typings/django-stubs/db/models/fields/: related_descriptors.pyi
typings/ninja-stubs/params/: __init__.pyi
