[project]
name = "backend"
version = "0.1.0"
description = "A django-ninja backend template"
dependencies = [
    "uwsgi",
    "pick",
    "rich",
    "ipython",
    "pydantic~=2.0",
    "django-ninja",
    "django-extensions",
    "django>=3.1",
    "arrow",
    "PyJWT",
    "django-cors-headers",
    "mysqlclient",
    "requests",
    "redis==4.6.0",
    "loguru",
    "django-print-sql",
    "psutil>=6.0",
    "django-tinymce",
    "beautifulsoup4",
    "django-filebrowser-no-grappelli",
    "pillow",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.ruff]
extend-exclude = ["backend/apps/*/migrations"]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "A",      # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "B006",   #https://docs.astral.sh/ruff/rules/mutable-argument-default/
    "I",      #https://docs.astral.sh/ruff/rules/#isort-i
    "UP",     #https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RET503", #https://docs.astral.sh/ruff/rules/implicit-return/
]
ignore = [
    "F401", # https://docs.astral.sh/ruff/rules/unused-import/
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
]

[tool.uv]
package = false
index-url = "https://mirror.nju.edu.cn/pypi/web/simple"
dev-dependencies = [
    "pytest-django",
    "types-redis~=4.6",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = [
    "tests/test_*.py",
    "tests/**/test_*.py",
    "backend/apps/*/tests.py",
    "backend/apps/*/test_*.py",
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::django.utils.deprecation.RemovedInDjango60Warning",
]
