[project]
name = "backend"
version = "0.1.0"
description = "A django-ninja backend template"
dependencies = [
    "uwsgi; sys_platform == 'linux'",
    "pick",
    "rich",
    "ipython",
    "pydantic~=2.0",
    "django-ninja>=1.4.0",
    "django-extensions",
    "django>=3.2",
    "arrow",
    "PyJWT",
    "django-cors-headers",
    "mysqlclient",
    "requests",
    "redis==4.6.0",
    "loguru",
    "django-print-sql",
    "psutil>=6.0",
    "django-tinymce",
    "beautifulsoup4",
    "django-filebrowser-no-grappelli",
    "pillow",
]
readme = "README.md"
requires-python = ">= 3.10"

[dependency-groups]
dev = ["pytest", "pytest-django", "ruff", "taskipy", "types-redis~=4.6"]

[tool.ruff]
extend-exclude = ["backend/apps/*/migrations"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "A",      # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "B006",   # https://docs.astral.sh/ruff/rules/mutable-argument-default/
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "RET503", # https://docs.astral.sh/ruff/rules/implicit-return/
]
ignore = [
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "F401", # https://docs.astral.sh/ruff/rules/unused-import/
]

[tool.uv]
package = false

[[tool.uv.dependency-metadata]]
name = "uwsgi"
requires-dist = []

[[tool.uv.index]]
url = "https://mirror.nju.edu.cn/pypi/web/simple"
default = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = [
    "tests/test_*.py",
    "tests/**/test_*.py",
    "backend/apps/*/tests.py",
    "backend/apps/*/test_*.py",
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::django.utils.deprecation.RemovedInDjango60Warning",
]

[tool.taskipy.tasks]
lint = "ruff format && ruff check --fix"
check = "python manage.py check"
pre_reload = "task lint && task check"
reload = "touch uwsgi.reload"
sync = "git pull --ff && uv sync && python manage.py migrate && python manage.py collectstatic"
shell = "python manage.py shell_plus --print-sql --ipython"
